# pfs-grpc

./: .gitignore  .gitmodules  CMakeLists.txt  Generate_gRPC.cmake  Generate_proto.cmake  Make_gRPC.cmake  README.md  REFERENCES.md  check_cxx11_features.cmake  check_cxx_features.cmake  dependences.cmake  gRPC.cmake
cmake/: cxx11_gcc_47_compiler_error_1035.cmake  cxx11_is_trivially_destructible.cmake  cxx11_map_emplace.cmake  cxx11_unordered_map_emplace.cmake  cxx_gxx_permissive.cmake  gRPC.cmake
include/pfs/cxx/: type_traits.hpp
include/pfs/grpc/: async_client.hpp  async_server.hpp
src/tests/: CMakeLists.txt  catch-main.cpp  catch.hpp  type_traits.cpp
src/tests/async/: async.cpp  async.proto  test.proto
src/tests/bunch/: async.cpp
src/tests/connection_recovery/: connection_recovery.cpp  connection_recovery.proto
